--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,15 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "check-git-hooks": "cd .. && node .secret-scan/secret-scan.js -- --check-git-hooks",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lint-check": "npm run check-git-hooks && expo lint --cache --report-unused-disable-directives && prettier --check ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -40,10 +42,15 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^9.15.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
+  "eslintConfig": {
+    "extends": ["expo"]
+  },
   "private": true
+  
 }
