--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "lint-check": "npm run check-git-hooks && expo lint --cache --report-unused-disable-directives && prettier --check ."
+    "lint-check": "npm run check-git-hooks && expo lint --cache --report-unused-disable-directives && prettier --check .",
+    "prepare": "cd .. && husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -43,14 +44,16 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^9.15.0",
+    "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
-    "extends": ["expo"]
+    "extends": [
+      "expo"
+    ]
   },
   "private": true
-  
 }
