--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,6 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
     "eslint-plugin-react": "^7.37.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -46,7 +44,10 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
