--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -1,9 +1,12 @@
 name: Run tests
 on:
   pull_request:
-    branches: main
+    branches:
+      - '**'
   push:
-    branches: main
+    branches:
+      - '**'
+
 jobs:
   frontend:
     name: Frontend tests
