--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
     "http-errors": "^2.0.0",
     "module-alias": "^2.2.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -28,7 +31,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.1",
     "@types/http-errors": "^2.0.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
