--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.13.1"
   },
   "name": "backend",
   "version": "1.0.0",
