--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.11.11",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.57.1",
