--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "lint-fix": "npm run check-git-hooks && (eslint --fix --cache --report-unused-disable-directives . || true) && prettier --write .",
     "lint-check": "npm run check-git-hooks && eslint --cache --report-unused-disable-directives . && prettier --check .",
     "prepare": "cd .. && husky",
-    "check-git-hooks": "cd .. && node .secret-scan/secret-scan.js -- --check-git-hooks"
+    "check-git-hooks": "cd .. && node .secret-scan/secret-scan.js -- --check-git-hooks",
+    "setup-db": "bash src/db/setup_db.sh"
   },
   "keywords": [],
   "author": "",
