--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@react-navigation/drawer": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.0",
+    "babel-plugin-dotenv-import": "^3.0.1",
+    "dotenv": "^16.5.0",
     "eslint-plugin-react": "^7.37.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -40,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
